kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  labels:
    name: todoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 3000
      - path: "/api"
        pathType: ImplementationSpecific
        backend: 
          service: 
            name: backend-service
            port: 
              number: 8080
